step 3: add CSS

--- a/index.html
+++ b/index.html
@@ -2,127 +2,143 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Matteus - resume</title>
+    <title>Matteus H.</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="favicon.png" />
   </head>
-  <body>
-    <div>
+  <div class="resume-container">
+    <body>
+      <div>
+        <table>
+          <tr>
+            <td class="text-align-start">Stockholm, Sweden</td>
+            <td rowspan="2" class="text-align-center">
+              <span class="header-font-size">Matteus Henriksson</span>
+            </td>
+            <td class="text-align-end">
+              <a href="https://linkedin.com/in/matteushenriksson"
+                >linkedin.com/in/matteushenriksson</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td class="text-align-start">matteus.henriksson@gmail.com</td>
+            <td class="text-align-end">
+              <a href="https://github.com/matteus-henriksson"
+                >github.com/matteus-henriksson</a
+              >
+            </td>
+          </tr>
+        </table>
+      </div>
+
+      <br />
+
+      <span>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum
+      </span>
+
+      <h3 class="bold-text">Work experience</h3>
+      <hr />
+
       <table>
-        <tr>
-          <td>Stockholm, Sweden</td>
-          <td rowspan="2"><h2>Matteus Henriksson</h2></td>
-          <td>linkedin.com/in/matteushenriksson</td>
+        <tr class="bold-text">
+          <td class="text-align-start">IT-Consultant</td>
+          <td class="text-align-center">OMT Management</td>
+          <td class="text-align-end">Nov 2023-Present</td>
         </tr>
         <tr>
-          <td>matteus.henriksson@gmail.com</td>
-          <td>github.com/matteus-henriksson</td>
+          <td class="text-align-start">Business Engineering team</td>
+          <td class="text-align-center">Stockholm, Sweden</td>
+          <td></td>
         </tr>
       </table>
-    </div>
-    <span>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum
-    </span>
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum
+        </li>
+      </ul>
 
-    <h4>Work experience</h4>
-    <hr />
+      <table>
+        <tr class="bold-text">
+          <td class="text-align-start">System developer</td>
+          <td class="text-align-center">Tekniska verken i Linköping</td>
+          <td class="text-align-end">2022-2023</td>
+        </tr>
+        <tr>
+          <td class="text-align-start">Utility Competence Center team</td>
+          <td class="text-align-center">Linköping, Sweden</td>
+          <td></td>
+        </tr>
+      </table>
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum
+        </li>
+      </ul>
 
-    <table>
-      <tr>
-        <td>IT-Consultant</td>
-        <td>OMT</td>
-        <td>Nov 2023-Present</td>
-      </tr>
-      <tr>
-        <td>Business Engineering team</td>
-        <td>Stockholm, Sweden</td>
-        <td></td>
-      </tr>
-    </table>
-    <ul>
-      <li>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum
-      </li>
-    </ul>
+      <table>
+        <tr class="bold-text">
+          <td class="text-align-start">Master Thesis</td>
+          <td class="text-align-center">Scania, Engine Assembly</td>
+          <td class="text-align-end">2022</td>
+        </tr>
+        <tr>
+          <td class="text-align-start">IT & Automation team</td>
+          <td class="text-align-center">Södertälje, Sweden</td>
+          <td></td>
+        </tr>
+      </table>
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum
+        </li>
+      </ul>
 
-    <table>
-      <tr>
-        <td>System developer</td>
-        <td>Tekniska verken i Linköping</td>
-        <td>2022-2023</td>
-      </tr>
-      <tr>
-        <td>Utility Competence Center team</td>
-        <td>Linköping, Sweden</td>
-        <td></td>
-      </tr>
-    </table>
-    <ul>
-      <li>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum
-      </li>
-    </ul>
+      <h3>Education</h3>
+      <hr />
+      <ul>
+        <li>
+          <b>Master of Science in Engineering</b>, Information Technology,
+          Linköping University, Sweden. 2017-2022
+        </li>
+      </ul>
 
-    <table>
-      <tr>
-        <td>Master Thesis</td>
-        <td>Scania, Engine Assembly</td>
-        <td>2022</td>
-      </tr>
-      <tr>
-        <td>IT & Automation team</td>
-        <td>Södertälje, Sweden</td>
-        <td></td>
-      </tr>
-    </table>
-    <ul>
-      <li>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum
-      </li>
-    </ul>
-
-    <h4>Education</h4>
-    <hr />
-    <ul>
-      <li>
-        Master of Science in Engineering, Information Technology, Linköping
-        University, Sweden. 2017-2022
-      </li>
-    </ul>
-
-    <h4>Technologies and Languages</h4>
-    <hr />
-    <ul>
-      <li>Languages: C#, JavaScript/TypeScript, Java, Python, C++</li>
-      <li>
-        Technologies: .NET, ASP.NET Core, Azure DevOps, Blazor, Bicep, MySQL,
-        MSSQL, Azure, Git, Microsoft Power Platform, Microsoft 365
-      </li>
-    </ul>
-  </body>
+      <h3>Technologies and Languages</h3>
+      <hr />
+      <ul>
+        <li><b>Languages</b>: C#, JavaScript/TypeScript, Java, Python, C++</li>
+        <li>
+          <b>Technologies</b>: .NET, ASP.NET Core, Azure DevOps, Blazor, Bicep,
+          MySQL, MSSQL, Azure, Git, Microsoft Power Platform, Microsoft 365
+        </li>
+      </ul>
+    </body>
+  </div>
 </html>
