step 7: add Javascript

--- a/index.html
+++ b/index.html
@@ -1,144 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Matteus H.</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="favicon.png" />
-  </head>
-  <div class="resume-container">
-    <body>
-      <div>
-        <table>
-          <tr>
-            <td class="text-align-start">Stockholm, Sweden</td>
-            <td rowspan="2" class="text-align-center">
-              <span class="header-font-size">Matteus Henriksson</span>
-            </td>
-            <td class="text-align-end">
-              <a href="https://linkedin.com/in/matteushenriksson"
-                >linkedin.com/in/matteushenriksson</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td class="text-align-start">matteus.henriksson@gmail.com</td>
-            <td class="text-align-end">
-              <a href="https://github.com/matteus-henriksson"
-                >github.com/matteus-henriksson</a
-              >
-            </td>
-          </tr>
-        </table>
-      </div>
 
-      <br />
+<head>
+  <meta charset="UTF-8" />
+  <title>Matteus H.</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" href="favicon.png" />
+</head>
+<div class="resume-container">
 
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum
-      </span>
-
-      <h3 class="bold-text">Work experience</h3>
-      <hr />
-
+  <body>
+    <div>
       <table>
-        <tr class="bold-text">
-          <td class="text-align-start">IT-Consultant</td>
-          <td class="text-align-center">OMT Management</td>
-          <td class="text-align-end">Nov 2023-Present</td>
+        <tr>
+          <td class="text-align-start">Stockholm, Sweden</td>
+          <td rowspan="2" class="text-align-center">
+            <span class="header-font-size">Matteus Henriksson</span>
+          </td>
+          <td class="text-align-end">
+            <a href="https://linkedin.com/in/matteushenriksson">linkedin.com/in/matteushenriksson</a>
+          </td>
         </tr>
         <tr>
-          <td class="text-align-start">Business Engineering team</td>
-          <td class="text-align-center">Stockholm, Sweden</td>
-          <td></td>
+          <td class="text-align-start">matteus.henriksson@gmail.com</td>
+          <td class="text-align-end">
+            <a href="https://github.com/matteus-henriksson">github.com/matteus-henriksson</a>
+          </td>
         </tr>
       </table>
-      <ul>
-        <li>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum
-        </li>
-      </ul>
+    </div>
 
-      <table>
-        <tr class="bold-text">
-          <td class="text-align-start">System developer</td>
-          <td class="text-align-center">Tekniska verken i Linköping</td>
-          <td class="text-align-end">2022-2023</td>
-        </tr>
-        <tr>
-          <td class="text-align-start">Utility Competence Center team</td>
-          <td class="text-align-center">Linköping, Sweden</td>
-          <td></td>
-        </tr>
-      </table>
-      <ul>
-        <li>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum
-        </li>
-      </ul>
+    <br />
 
-      <table>
-        <tr class="bold-text">
-          <td class="text-align-start">Master Thesis</td>
-          <td class="text-align-center">Scania, Engine Assembly</td>
-          <td class="text-align-end">2022</td>
-        </tr>
-        <tr>
-          <td class="text-align-start">IT & Automation team</td>
-          <td class="text-align-center">Södertälje, Sweden</td>
-          <td></td>
-        </tr>
-      </table>
-      <ul>
-        <li>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum
-        </li>
-      </ul>
+    <span>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+      occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+      mollit anim id est laborum
+    </span>
 
-      <h3>Education</h3>
-      <hr />
-      <ul>
-        <li>
-          <b>Master of Science in Engineering</b>, Information Technology,
-          Linköping University, Sweden. 2017-2022
-        </li>
-      </ul>
+    <h3 class="bold-text">Work experience</h3>
+    <hr />
 
-      <h3>Technologies and Languages</h3>
-      <hr />
-      <ul>
-        <li><b>Languages</b>: C#, JavaScript/TypeScript, Java, Python, C++</li>
-        <li>
-          <b>Technologies</b>: .NET, ASP.NET Core, Azure DevOps, Blazor, Bicep,
-          MySQL, MSSQL, Azure, Git, Microsoft Power Platform, Microsoft 365
-        </li>
-      </ul>
-    </body>
-  </div>
+    <table>
+      <tr class="bold-text">
+        <td class="text-align-start">IT-Consultant</td>
+        <td class="text-align-center">OMT</td>
+        <td class="text-align-end">Nov 2023-Present</td>
+      </tr>
+      <tr>
+        <td class="text-align-start">Business Engineering team</td>
+        <td class="text-align-center">Stockholm, Sweden</td>
+        <td></td>
+      </tr>
+    </table>
+    <ul>
+      <li>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        culpa qui officia deserunt mollit anim id est laborum
+      </li>
+    </ul>
+
+    <table>
+      <tr class="bold-text">
+        <td class="text-align-start">System developer</td>
+        <td class="text-align-center">Tekniska verken i Linköping</td>
+        <td class="text-align-end">2022-2023</td>
+      </tr>
+      <tr>
+        <td class="text-align-start">Utility Competence Center team</td>
+        <td class="text-align-center">Linköping, Sweden</td>
+        <td></td>
+      </tr>
+    </table>
+    <ul>
+      <li>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        culpa qui officia deserunt mollit anim id est laborum
+      </li>
+    </ul>
+
+    <table>
+      <tr class="bold-text">
+        <td class="text-align-start">Master Thesis</td>
+        <td class="text-align-center">Scania, Engine Assembly</td>
+        <td class="text-align-end">2022</td>
+      </tr>
+      <tr>
+        <td class="text-align-start">IT & Automation team</td>
+        <td class="text-align-center">Södertälje, Sweden</td>
+        <td></td>
+      </tr>
+    </table>
+    <ul>
+      <li>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        culpa qui officia deserunt mollit anim id est laborum
+      </li>
+    </ul>
+
+    <h3>Education</h3>
+    <hr />
+    <ul>
+      <li>
+        <b>Master of Science in Engineering</b>, Information Technology,
+        Linköping University, Sweden. 2017-2022
+      </li>
+    </ul>
+
+    <h3>Technologies and Languages</h3>
+    <hr />
+    <ul>
+      <li><b>Languages</b>: C#, JavaScript/TypeScript, Java, Python, C++</li>
+      <li>
+        <b>Technologies</b>: .NET, ASP.NET Core, Azure DevOps, Blazor, Bicep,
+        MySQL, MSSQL, Azure, Git, Microsoft Power Platform, Microsoft 365
+      </li>
+    </ul>
+
+    <h3 class="text-align-center">Visitors: <span id="visitorCount">Loading...</span></h3>
+
+    <script src="app.js"></script>
+  </body>
+</div>
+
 </html>
